# crypto-pulse-lakehouse

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  main.py  main.tf  pyproject.toml
notebook/: explore_api.ipynb
src/: historical_backfill.py  lambda_function.py
transform/: dbt_project.yml
transform/models/: schema.yml
transform/models/marts/: fct_crypto_market_pulse.sql
transform/models/staging/: sources.yml  stg_crypto_prices.sql
